--- a/templates/katalog.html
+++ b/templates/katalog.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/katalog_design.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/katalog.css') }}">
     <title>ИнТехЛайт - Каталог</title>
 </head>
 <body>
     <header>
         <div class="header_inner">
             <div class="header_logo">
-                <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='img/icons.png') }}" alt="Логотип ИнТехЛайт"/></a>
+                <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='img/small/icons.png') }}" alt="Логотип ИнТехЛайт"/></a>
             </div>
-            <a href="{{ url_for('katalog') }}"><button class="but_catalog">Каталог</button></a>
+            <a href="{{ url_for('catalog') }}"><button class="but_catalog">Каталог</button></a>
          
             <nav>
                 <ul class="header_nav_menu">
@@ -40,13 +40,13 @@
 
             <div class="header_button_icons">
                 <button>
-                    <img src="{{ url_for('static', filename='img/Vector1.png') }}"/>
+                    <img src="{{ url_for('static', filename='img/small/Vector1.png') }}"/>
                 </button>
                 <button>
-                    <img src="{{ url_for('static', filename='img/Vector2.png') }}" alt="Избранное"/>
+                    <img src="{{ url_for('static', filename='img/small/Vector2.png') }}" alt="Избранное"/>
                 </button>
                 <button>
-                    <img src="{{ url_for('static', filename='img/Vector3.png') }}" alt="Корзина"/>
+                    <img src="{{ url_for('static', filename='img/small/Vector3.png') }}" alt="Корзина"/>
                 </button>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 {% for category in categories %}
                 <div class="post">
                     <a href="{{ url_for('category_products', cat_id=category.id) }}">
-                        <img src="{{ url_for('static', filename='img/' + category.image) }}"/>
+                        <img src="{{ url_for('static', filename='img/small/' + category.image) }}"/>
                         <h3>{{ category.name }}</h3>
                     </a>
                 </div>
@@ -107,7 +107,7 @@
             <nav>
                 <ul class="footer_menu">
                     <li><a href="{{ url_for('index') }}">Главная страница</a></li>
-                    <li><a href="{{ url_for('katalog') }}">Каталог</a></li>
+                    <li><a href="{{ url_for('catalog') }}">Каталог</a></li>
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Реквизиты</a></li>
                     <li><a href="#">Контакты</a></li>
