--- a/static/css/katalog.css
+++ b/static/css/katalog.css
@@ -153,7 +153,8 @@ main {
     color: #42546E;
     margin: 0;
     margin-top: 10px;
-    font-size: 24px;
+    font-size: 22px;
+    text-align: center;
     font-weight: bold;
 } 
 
