добавила атрибуты к товарам

--- a/static/css/kat_tovars.css
+++ b/static/css/kat_tovars.css
@@ -166,6 +166,7 @@ main {
     display: flex;
     justify-content: center;
     gap: 55px;
+    flex-wrap: wrap;
 }
 .post_poshipniki{
     width: 20%;
