--- a/templates/kat_tovars.html
+++ b/templates/kat_tovars.html
@@ -10,9 +10,9 @@
     <header>
         <div class="header_inner">
             <div class="header_logo">
-                <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='img/small/icons.png') }}" alt="Логотип ИнТехЛайт"/></a>
+                <a href="{{ url_for('main.index') }}"><img src="{{ url_for('static', filename='img/small/icons.png') }}" alt="Логотип ИнТехЛайт"/></a>
             </div>
-            <a href="{{ url_for('catalog') }}"><button class="but_catalog">Каталог</button></a>
+            <a href="{{ url_for('main.catalog') }}"><button class="but_catalog">Каталог</button></a>
          
             <nav>
                 <ul class="header_nav_menu">
@@ -67,13 +67,13 @@
                     <div class="product_image">
                         <img src="{{ url_for('static', filename='img/small/' + product.image) }}" alt="Картинка товара"/>
                     </div>
-                    <a href="{{ url_for('product_detail', product_id=product.id) }}">
+                    <a href="{{ url_for('main.product_detail', product_id=product.id) }}">
                         <h3 class="post_name">{{ product.name }}</h3>
                     </a>
-                    <a href="{{ url_for('product_detail', product_id=product.id) }}">
+                    <a href="{{ url_for('main.product_detail', product_id=product.id) }}">
                         <p>{{ product.short_specs }}</p>
                     </a>
-                    <a href="{{ url_for('product_detail', product_id=product.id) }}">
+                    <a href="{{ url_for('main.product_detail', product_id=product.id) }}">
                         <h3>{{ product.price }} ₽ / {{ product.unit or 'шт' }}</h3>
                     </a>
                 </div>
